force-app/main/default/objects/Bot_Routing_Rule_POC__c/Bot_Routing_Rule_POC__c.object-meta.xml
<CustomObject>
    <label>Bot Routing Rule</label>
    <nameField>
        <label>Bot Routing Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bot Routing Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>