force-app/main/default/objects/Bot_Routing_Rule_POC__c/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <externalId>true</externalId>
    <label>Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>