force-app/main/default/objects/Bot_Routing_Rule_POC__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>