force-app/main/default/objects/Bot_Routing_Rule_POC__c/fields/Target_Dialog__c.field-meta.xml
<CustomField>
    <fullName>Target_Dialog__c</fullName>
    <label>Target Dialog</label>
    <length>255</length>
    <type>Text</type>
</CustomField>